// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ZaakStatus > should show an error 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="_Page_47d7c0 _TextPage_47d7c0"
      >
        <header
          class="_PageHeading_3b337d"
        >
          <div
            class="_HeadingInner_3b337d"
          >
            <h2
              class="ams-heading ams-heading--1"
            >
              Status van uw aanvraag
            </h2>
          </div>
        </header>
        <div
          class="_PageContent_47d7c0"
        >
          <span
            class="_LoadingContent_16e37c _LoadingContent_fa1c1f"
          >
            <span
              style="width: auto; height: 2rem; margin-bottom: 1rem;"
            />
            <span
              style="width: auto; height: 2rem; margin-bottom: 0px;"
            />
          </span>
          <p
            class="ams-paragraph"
          >
            Wij kunnen de status van uw aanvraag nu niet laten zien.
          </p>
          <p
            class="ams-paragraph"
          >
            <a
              class="ams-link ams-link--standalone"
              to="/"
            >
              Ga naar het dashboard
            </a>
          </p>
        </div>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="_Page_47d7c0 _TextPage_47d7c0"
    >
      <header
        class="_PageHeading_3b337d"
      >
        <div
          class="_HeadingInner_3b337d"
        >
          <h2
            class="ams-heading ams-heading--1"
          >
            Status van uw aanvraag
          </h2>
        </div>
      </header>
      <div
        class="_PageContent_47d7c0"
      >
        <span
          class="_LoadingContent_16e37c _LoadingContent_fa1c1f"
        >
          <span
            style="width: auto; height: 2rem; margin-bottom: 1rem;"
          />
          <span
            style="width: auto; height: 2rem; margin-bottom: 0px;"
          />
        </span>
        <p
          class="ams-paragraph"
        >
          Wij kunnen de status van uw aanvraag nu niet laten zien.
        </p>
        <p
          class="ams-paragraph"
        >
          <a
            class="ams-link ams-link--standalone"
            to="/"
          >
            Ga naar het dashboard
          </a>
        </p>
      </div>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ZaakStatus > should show wachten op betaling 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="_Page_47d7c0 _TextPage_47d7c0"
      >
        <header
          class="_PageHeading_3b337d"
        >
          <div
            class="_HeadingInner_3b337d"
          >
            <h2
              class="ams-heading ams-heading--1"
            >
              Status van uw aanvraag
            </h2>
          </div>
        </header>
        <div
          class="_PageContent_47d7c0"
        >
          <span
            class="_LoadingContent_16e37c _LoadingContent_fa1c1f"
          >
            <span
              style="width: auto; height: 2rem; margin-bottom: 1rem;"
            />
            <span
              style="width: auto; height: 2rem; margin-bottom: 0px;"
            />
          </span>
          <p
            class="ams-paragraph"
          >
            U heeft betaald voor deze aanvraag. Het kan even duren voordat uw aanvraag op Mijn Amsterdam te zien is.
          </p>
          <p
            class="ams-paragraph"
          >
            Wij kunnen de status van uw aanvraag nu niet laten zien.
          </p>
          <p
            class="ams-paragraph"
          >
            <a
              class="ams-link ams-link--standalone"
              to="/vergunningen"
            >
              Bekijk het overzicht
            </a>
          </p>
        </div>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="_Page_47d7c0 _TextPage_47d7c0"
    >
      <header
        class="_PageHeading_3b337d"
      >
        <div
          class="_HeadingInner_3b337d"
        >
          <h2
            class="ams-heading ams-heading--1"
          >
            Status van uw aanvraag
          </h2>
        </div>
      </header>
      <div
        class="_PageContent_47d7c0"
      >
        <span
          class="_LoadingContent_16e37c _LoadingContent_fa1c1f"
        >
          <span
            style="width: auto; height: 2rem; margin-bottom: 1rem;"
          />
          <span
            style="width: auto; height: 2rem; margin-bottom: 0px;"
          />
        </span>
        <p
          class="ams-paragraph"
        >
          U heeft betaald voor deze aanvraag. Het kan even duren voordat uw aanvraag op Mijn Amsterdam te zien is.
        </p>
        <p
          class="ams-paragraph"
        >
          Wij kunnen de status van uw aanvraag nu niet laten zien.
        </p>
        <p
          class="ams-paragraph"
        >
          <a
            class="ams-link ams-link--standalone"
            to="/vergunningen"
          >
            Bekijk het overzicht
          </a>
        </p>
      </div>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
